--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@700&display=swap');
 
 :root {
+
   --light-orange: #F6B868;
   --deep-orange: #EE6B2D;
 
@@ -44,11 +45,11 @@ a {
 .items-center {
   align-items: center;
 }
-
+/* 
 .bg-gradient-orange {
-  background: -webkit-gradient(var(--light-orange),var(--deep-orange));
+  background: -webkit-gradient(var(--light-orange), var(--deep-orange));
   background: linear-gradient(var(--light-orange), var(--deep-orange));
-}
+} */
 
 .bg-gradient-blue {
   background: -webkit-gradient(var(--light-blue),var(--deep-blue));
@@ -96,6 +97,7 @@ a {
 .quiz-selects {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -167,6 +169,21 @@ a {
 
 .selected-bg-ext {
   width: 33%;
+  border-radius: 24px;
+}
+
+.selected-bg-ext-col {
+  width: 100%;
+  border-radius: 24px;
+}
+
+
+.select-container[data-position="center"] > .selected-bg-col {
+  border-radius: 0;
+}
+
+.select-container[data-position="end"] > .selected-bg-col {
+  border-radius: 0 0 24px 24px;
 }
 
 .selected-bg-col {
