--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -172,11 +172,11 @@ a {
   border-radius: 24px;
 }
 
-.selected-bg-ext-col {
+.selected-bg-col {
+  height: 50%;
   width: 100%;
   border-radius: 24px;
 }
-
 
 .select-container[data-position="center"] > .selected-bg-col {
   border-radius: 0;
@@ -186,7 +186,7 @@ a {
   border-radius: 0 0 24px 24px;
 }
 
-.selected-bg-col {
+.selected-bg-ext-col {
   height: 33%;
   width: 100%;
 }
