--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -183,7 +183,7 @@ a {
 .selected-bg-col {
   height: 50%;
   width: 100%;
-  border-radius: 24px;
+  border-radius: 24px 24px 0 0;
 }
 
 .select-container[data-position="center"] > .selected-bg-col {
